# meridian

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  clippy.toml  docker-compose.dev.yml  rustfmt.toml
conformance/e2e/: README.md  pyproject.toml  run.sh
conformance/e2e/tests/: conftest.py  lifecycle.py  test_catalog_as_code.py  test_concurrent_writers.py  test_duckdb_read.py  test_governance_enforcement.py  test_pyiceberg_fs.py  test_pyiceberg_minio.py  test_remote_signing.py  test_vended_credentials.py  test_views.py
crates/meridian-agents/: Cargo.toml
crates/meridian-agents/src/: catalog.rs  decision.rs  executor.rs  lib.rs  protocol.rs
crates/meridian-authz/: Cargo.toml
crates/meridian-authz/src/: context.rs  decision.rs  enforcement.rs  engine.rs  error.rs  lib.rs  principal.rs  resolve.rs  resource.rs  rules.rs  validate.rs
crates/meridian-authz/tests/: abac.rs  enforcement.rs  properties.rs  validation.rs
crates/meridian-cli/: Cargo.toml
crates/meridian-cli/src/: client.rs  main.rs
crates/meridian-cli/src/bundle/: apply.rs  interpolate.rs  mod.rs  model.rs  plan.rs
crates/meridian-common/: Cargo.toml
crates/meridian-common/src/: config.rs  error.rs  id.rs  lib.rs  principal.rs  telemetry.rs
crates/meridian-executor/: Cargo.toml
crates/meridian-executor/src/: arrow_schema.rs  compact.rs  error.rs  lib.rs  manifest_source.rs  metadata_result.rs  plan.rs  rewrite.rs  select.rs  stats.rs
crates/meridian-executor/tests/: compaction.rs
crates/meridian-executor/tests/support/: mod.rs
crates/meridian-federation/: Cargo.toml
crates/meridian-federation/src/: client.rs  lib.rs  sync.rs  worker.rs
crates/meridian-iceberg/: Cargo.toml
crates/meridian-iceberg/src/: commit.rs  lib.rs  planning.rs  value.rs
crates/meridian-iceberg/src/expr/: evaluate.rs  mod.rs  project.rs  transforms.rs
crates/meridian-iceberg/src/manifest/: mod.rs  read.rs  write.rs
crates/meridian-iceberg/src/spec/: builder.rs  encryption.rs  fresh.rs  mod.rs  partition.rs  requirement.rs  schema.rs  snapshot.rs  sort.rs  statistics.rs  table_metadata.rs  transform.rs  types.rs  update.rs  view.rs  view_builder.rs  view_requirement.rs  view_update.rs
crates/meridian-iceberg/tests/: builder_properties.proptest-regressions  builder_properties.rs  commit_properties.rs  expr_pruning.rs  expr_soundness.rs  fresh_ids.rs  manifest_fixtures.rs  manifest_round_trip.rs  requirements.rs  round_trip.rs  updates.rs  view_builder_properties.rs  view_round_trip.rs  view_updates.rs
crates/meridian-iceberg/tests/commit_harness/: mod.rs
crates/meridian-iceberg/tests/fixtures/: README.md  generate.py  table_metadata_v1.json  table_metadata_v2.json  table_metadata_v3.json  view_metadata_v1.json
crates/meridian-lineage/: Cargo.toml
crates/meridian-lineage/src/: commit_hook.rs  impact.rs  lib.rs  model.rs  openlineage.rs  resolve.rs  worker.rs
crates/meridian-lineage/tests/: lineage_db.rs
crates/meridian-query/: Cargo.toml
crates/meridian-query/src/: catalog.rs  error.rs  executor.rs  lib.rs  policy.rs  reader.rs  refs.rs  result.rs  types.rs
crates/meridian-query/tests/: executor.rs
crates/meridian-query/tests/support/: mod.rs
crates/meridian-server/: Cargo.toml
crates/meridian-server/src/: error.rs  events.rs  governance.rs  lib.rs  maintenance.rs  quality_monitor.rs  sidecar.rs
crates/meridian-server/tests/: api.rs  assets_api.rs  audit_api.rs  auth.rs  branching_api.rs  contracts_api.rs  events_api.rs  federation_api.rs  federation_mirror.rs  governance_api.rs  http.rs  maintenance_worker.rs  mcp_api.rs  planning_api.rs  planning_perf.rs  quality_api.rs  rbac_api.rs  search_api.rs  semantics_api.rs  shares_api.rs  signing_api.rs  storage_config_api.rs  tables_api.rs  vending_api.rs  views_api.rs  workbench_api.rs
crates/meridian-storage/: Cargo.toml
crates/meridian-storage/src/: error.rs  lib.rs  metadata.rs  profile.rs  storage.rs
crates/meridian-storage/tests/: storage_backends.rs  view_metadata_files.rs
crates/meridian-store/: Cargo.toml
crates/meridian-store/migrations/: 0001_init.sql  0002_tenancy_namespaces.sql  0003_tables_commit.sql  0004_auth.sql  0005_rbac.sql  0006_views.sql  0007_view_grants.sql  0008_events.sql  0010_search.sql  0011_scan_planning.sql  0012_maintenance.sql  0013_maintenance_reconcile.sql  0014_federation_mirrors.sql  0015_federation_foreign_assets.sql  0016_governance_policy_tags.sql  0017_lineage_edges.sql  0018_contracts.sql  0019_monitors_incidents.sql  0020_agents.sql  0021_semantics.sql  0022_workbench.sql  0023_ai_assets.sql  0024_sharing.sql  0025_branching.sql  0026_audit_query_indexes.sql  0027_maintenance_job_run_after.sql
crates/meridian-store/src/: access_requests.rs  agent.rs  assets.rs  audit.rs  branches.rs  commit.rs  consumer.rs  contracts.rs  federation.rs  foreign.rs  health.rs  incidents.rs  lib.rs  maintenance.rs  monitors.rs  namespace.rs  outbox.rs  planning.rs  policy.rs  pool.rs  principal.rs  quality_score.rs  rbac.rs  search.rs  semantics.rs  shares.rs  table.rs  tags.rs  tenancy.rs  view.rs  warehouse.rs  webhook.rs  workbench.rs
crates/meridian-store/tests/: assets_db.rs  commit_properties_pg.rs  db.rs  events_db.rs  health_db.rs  maintenance_db.rs  quality_score_db.rs  rbac_db.rs  search_db.rs  semantics_db.rs  shares_db.rs  table_db.rs  tenancy_db.rs  workbench_db.rs
crates/meridian-vending/: Cargo.toml
crates/meridian-vending/src/: config.rs  lib.rs  policy.rs  static_vendor.rs  sts.rs  unsupported.rs
crates/meridian-vending/tests/: minio_sts.rs
sidecar/: README.md  pyproject.toml  run.sh
sidecar/meridian_sidecar/: __init__.py  app.py  core.py  llm_assist.py  schemas.py
sidecar/tests/: test_app.py  test_compile_metric.py  test_llm_assist.py  test_parse.py  test_transpile.py
testing/bench/: Cargo.toml  README.md
testing/bench/scripts/: bench-down.sh  env.sh  lakekeeper-up.sh  meridian-up.sh  plan-perf.sh  polaris-up.sh
testing/bench/src/: catalog.rs  fixture.rs  lib.rs  main.rs  runner.rs  stats.rs
(+182 files in other folders)
