[workspace]
resolver = "3"
members = [
    "crates/meridian-common",
    "crates/meridian-store",
    "crates/meridian-iceberg",
    "crates/meridian-storage",
    "crates/meridian-server",
    "crates/meridian-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/meridian-catalog/meridian"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
meridian-common = { path = "crates/meridian-common" }
meridian-store = { path = "crates/meridian-store" }
meridian-iceberg = { path = "crates/meridian-iceberg" }
meridian-storage = { path = "crates/meridian-storage" }
meridian-server = { path = "crates/meridian-server" }

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP
axum = "0.8"
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout", "limit"] }
http = "1.3"
http-body-util = "0.1"

# Database. Runtime queries only for now (no compile-time checked macros) so the
# workspace builds without a live database; see docs/dev.md.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "chrono",
    "json",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Identifiers & time
ulid = { version = "1.2", features = ["serde"] }
uuid = { version = "1.11", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI & config
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP client (CLI -> server; rustls so no system OpenSSL is required)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Testing (dev-dependencies only)
proptest = "1.7"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allowances over pedantic defaults.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
