[workspace]
resolver = "3"
members = [
    "crates/meridian-common",
    "crates/meridian-store",
    "crates/meridian-iceberg",
    "crates/meridian-authz",
    "crates/meridian-storage",
    "crates/meridian-vending",
    "crates/meridian-executor",
    "crates/meridian-federation",
    "crates/meridian-lineage",
    "crates/meridian-query",
    "crates/meridian-agents",
    "crates/meridian-server",
    "crates/meridian-cli",
    "testing/bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/meridian-catalog/meridian"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
meridian-common = { path = "crates/meridian-common" }
meridian-store = { path = "crates/meridian-store" }
meridian-iceberg = { path = "crates/meridian-iceberg" }
meridian-authz = { path = "crates/meridian-authz" }
meridian-storage = { path = "crates/meridian-storage" }
meridian-vending = { path = "crates/meridian-vending" }
meridian-executor = { path = "crates/meridian-executor" }
meridian-federation = { path = "crates/meridian-federation" }
meridian-lineage = { path = "crates/meridian-lineage" }
meridian-query = { path = "crates/meridian-query" }
meridian-agents = { path = "crates/meridian-agents" }
meridian-server = { path = "crates/meridian-server" }

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP
axum = "0.8"
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "timeout", "limit", "cors"] }
http = "1.3"
http-body-util = "0.1"

# Database. Runtime queries only for now (no compile-time checked macros) so the
# workspace builds without a live database; see docs/dev.md.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "chrono",
    "json",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# YAML (catalog-as-code bundles). serde_yaml is feature-frozen upstream but
# stable and ubiquitous; revisit if a maintained successor becomes standard.
serde_yaml = "0.9"

# Errors
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Identifiers & time
ulid = { version = "1.2", features = ["serde"] }
uuid = { version = "1.11", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI & config
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }

# HTTP client (CLI -> server, server -> IdP JWKS; rustls so no system OpenSSL
# is required)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# OIDC bearer-token validation (server authn)
jsonwebtoken = "9.3"

# ABAC policy engine (Pillar D / D-F1; ADR 009). Default features carry the
# datetime extension (time-bound grants), decimal, and ipaddr. AWS/Amazon's
# Cedar: policy-as-code with a formally verified evaluator and an explicit
# forbid-overrides-permit (deny-wins) model.
cedar-policy = "4.11"

# Credential vending: STS AssumeRole (AWS + MinIO). rustls everywhere, no
# system OpenSSL, matching the reqwest configuration above.
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-credential-types = "1"
aws-sdk-sts = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }

# Remote signing (ADR 005): SigV4 header signing plus the Identity type its
# API needs. Both were already in the tree transitively via aws-sdk-sts.
aws-sigv4 = "1"
aws-smithy-runtime-api = "1"
percent-encoding = "2"

# Avro object-container files (Iceberg manifest lists and manifests).
# deflate support is built in; snappy/zstandard cover the other codecs
# engines commonly use for manifest Avro.
apache-avro = { version = "0.21", features = ["snappy", "zstandard"] }

# Hashing & message authentication (webhook signatures)
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# Object-safe async traits (dyn dispatch over async methods): the agent
# gateway's QueryExecutor is held as `dyn` so wave 2 can plug the DataFusion
# executor in without the gateway depending on it.
async-trait = "0.1"

# Testing (dev-dependencies only)
proptest = "1.7"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allowances over pedantic defaults.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
