[project]
name = "meridian-sidecar"
version = "0.1.0"
description = "Meridian SQLGlot transpilation sidecar: universal-view transpilation, SQL parsing (tables/columns), and metric compilation over localhost HTTP."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.9",
    "sqlglot>=26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meridian_sidecar"]
