[package]
name = "meridian-cli"
description = "The meridian binary: serves the catalog and admin commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "meridian"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
meridian-common = { workspace = true }
meridian-server = { workspace = true }
meridian-store = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
