[package]
name = "meridian-common"
description = "Shared foundations for Meridian: typed IDs, errors, config, telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
figment = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }

[lints]
workspace = true
