[package]
name = "meridian-iceberg"
description = "Iceberg domain model for Meridian: table metadata, commit protocol, planning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
