[package]
name = "meridian-iceberg"
description = "Iceberg domain model for Meridian: table metadata, commit protocol, planning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
apache-avro = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
hex = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
