[package]
name = "meridian-server"
description = "Meridian HTTP server: Iceberg REST catalog + management APIs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
meridian-common = { workspace = true }
meridian-iceberg = { workspace = true }
meridian-storage = { workspace = true }
meridian-store = { workspace = true }
meridian-vending = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
http-body-util = { workspace = true }
tempfile = "3.20"

[lints]
workspace = true
