[package]
name = "meridian-server"
description = "Meridian HTTP server: Iceberg REST catalog + management APIs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
meridian-authz = { workspace = true }
meridian-common = { workspace = true }
meridian-executor = { workspace = true }
meridian-federation = { workspace = true }
meridian-iceberg = { workspace = true }
meridian-lineage = { workspace = true }
meridian-storage = { workspace = true }
meridian-store = { workspace = true }
meridian-vending = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
http-body-util = { workspace = true }
meridian-bench = { path = "../../testing/bench" }
tempfile = "3.20"
bytes = "1.10"
# The maintenance-worker end-to-end test builds a real small-files Iceberg
# table (real Parquet data files + real manifest Avro) on fs storage, runs the
# worker against it, and reads the compacted output back — the same read/write
# path production uses. Matches the executor crate's fixture toolchain.
arrow-array = { version = "59", default-features = false }
arrow-schema = { version = "59", default-features = false }
parquet = { version = "59", default-features = false, features = ["arrow", "zstd"] }

[lints]
workspace = true
