[package]
name = "meridian-storage"
description = "Object-storage IO for Meridian: fs/S3 backends, immutable metadata-file writes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
meridian-iceberg = { workspace = true }

async-trait = "0.1"
bytes = "1.10"
chrono = { workspace = true }
futures = "0.3"
opendal = { version = "0.57", default-features = false, features = [
    "services-fs",
    "services-s3",
    "layers-retry",
] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.20"
tokio = { workspace = true }
# `v4` on top of the workspace uuid features: tests mint random uuids.
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
