[package]
name = "meridian-store"
description = "Postgres access layer for Meridian: pool, migrations, outbox, audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
meridian-common = { workspace = true }
meridian-iceberg = { workspace = true }
meridian-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
bytes = "1.10"
proptest = { workspace = true }
tempfile = "3.20"
tokio = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
