[package]
name = "meridian-vending"
description = "Meridian credential vending: scoped, short-lived storage credentials per table"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-sts = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
meridian-storage = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
