[package]
name = "meridian-vending"
description = "Meridian storage access delegation: per-table credential vending and remote request signing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-sigv4 = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
percent-encoding = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
meridian-storage = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
