[package]
name = "meridian-bench"
description = "HTTP benchmark harness for Iceberg REST catalog servers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
hdrhistogram = { version = "7.5", default-features = false }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
