[package]
name = "meridian-bench"
description = "HTTP benchmark harness for Iceberg REST catalog servers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
bytes = "1.10"
clap = { workspace = true }
chrono = { workspace = true }
hdrhistogram = { version = "7.5", default-features = false }
meridian-iceberg = { workspace = true }
meridian-storage = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
